--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <header>
                     <nav class="navbar navbar-expand-sm">
 
-                        <a href="#" class="navbar-brand">MENU</a>
+                        <a href="#" class="navbar-brand">NAV</a>
                         
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#items">         
                             <i class="material-icons">menu</i>      
