--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                     <li class='nav-item'>
                         <a href='./random/billsandbills/index.html' class='nav-link'>Dívidas Malditas</a>
                     </li>
+                    <li class='nav-item'>
+                        <a href='./random/cadastroDeProdutos/index.html' class='nav-link'>Cadastro de Produtos</a>
+                    </li>
                 </ul>
             </nav>
         </article>
