--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <li class='nav-item'>
                         <a href='./random/cadastroDeProdutos/index.html' class='nav-link'>Cadastro de Produtos</a>
                     </li>
+		    <li class='nav-item'>
+                        <a href='./random/cadastroDePessoas/index.html' class='nav-link'>Cadastro de Pessoas</a>
+                    </li>
                 </ul>
             </nav>
         </article>
