--- a/random/billsandbills/index.html
+++ b/random/billsandbills/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dívidas Malditas</title>
+    <title>Dívidas e Ganhos</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 </head>
@@ -15,7 +15,7 @@
     <section class="container d-flex px-0 justify-content-center align-items-center">
         <section class="card bg-dark p-3 m-2">
             <article class="card-header">
-                <h2 class="text-center">Calculadora Suprema</h2>
+                <h2 class="text-center">Calculadora de Dívidas / Receitas</h2>
             </article>
             <article class="card-body d-flex flex-column">
                 
